<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?colorbg"
    tools:context="com.wf.demo.wfv30.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/MainText"
            style="?ptextmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/SpaceRow"
            android:text="@string/SetupMonitor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?pbg"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/Space"
            android:paddingTop="@dimen/Space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="?text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/SpaceMain"
                    android:text="@string/SizeData"
                    android:textAlignment="textStart" />

                <RadioGroup
                    android:id="@+id/SizeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />

                    <RadioButton
                        android:id="@+id/S"
                        style="?text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/S"
                        android:textAlignment="textStart" />

                    <RadioButton
                        android:id="@+id/M"
                        style="?text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/M"
                        android:textAlignment="textStart" />

                    <RadioButton
                        android:id="@+id/L"
                        style="?text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/L"
                        android:textAlignment="textStart" />

                </RadioGroup>

                <TextView
                    style="?text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/SpaceMain"
                    android:text="@string/DetailData"
                    android:textAlignment="textStart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />

                    <CheckBox
                        android:id="@+id/ShowCode"
                        style="?checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/ItemCode" />

                    <CheckBox
                        android:id="@+id/ShowDesc"
                        style="?checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/ItemDesc" />

                    <CheckBox
                        android:id="@+id/ShowImage"
                        style="?checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/ItemImage" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />

            <Button
                android:id="@+id/Cancel"
                style="?button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/SpaceRow"
                android:layout_marginRight="@dimen/SpaceRow"
                android:layout_marginTop="@dimen/SpaceRow"
                android:layout_weight="0.2"
                android:text="@string/Cancel" />

            <Button
                android:id="@+id/Submit"
                style="?button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/SpaceRow"
                android:layout_marginTop="@dimen/SpaceRow"
                android:layout_weight="0.2"
                android:text="@string/Submit" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>