<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?colorbg"
    tools:context="com.wf.demo.wfv30.MainActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/MainText"
            style="?ptextmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetupSound" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Space"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?pbg"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/SpaceMain"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/Groups"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/Default"
                            style="?text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Default" />

                        <RadioButton
                            android:id="@+id/Crystal"
                            style="?text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Crystal" />

                        <RadioButton
                            android:id="@+id/MouseClick"
                            style="?text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/MouseClick" />

                        <RadioButton
                            android:id="@+id/Bell"
                            style="?text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Bell" />

                        <RadioButton
                            android:id="@+id/Beep"
                            style="?text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Beep" />

                        <RadioButton
                            android:id="@+id/Swish"
                            style="?text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Swish" />

                    </RadioGroup>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />

            <Button
                android:id="@+id/Cancel"
                style="?button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/SpaceRow"
                android:layout_marginRight="@dimen/SpaceRow"
                android:layout_marginBottom="@dimen/SpaceRow"
                android:text="@string/Cancel" />

            <Button
                android:id="@+id/Submit"
                style="?button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/SpaceRow"
                android:layout_marginBottom="@dimen/SpaceRow"
                android:text="@string/Submit" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>