<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?colorbg"
    tools:context="com.wf.demo.wfv30.MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/MainText"
            style="?ptextmain"
            android:paddingBottom="@dimen/SpaceRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetupShop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?pbg"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/Space"
            android:paddingTop="@dimen/Space">

            <RadioGroup
                android:id="@+id/ShopGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/HotPrice"
                    style="?text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/PriceTypeH"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/Menu"
                    style="?text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/PriceTypeM"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/Manual"
                    style="?text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/PriceTypeE"
                    android:textAlignment="textStart" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />

            <Button
                android:id="@+id/Cancel"
                style="?button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/SpaceRow"
                android:layout_marginRight="@dimen/SpaceRow"
                android:layout_marginTop="@dimen/SpaceRow"
                android:layout_weight="0.2"
                android:text="@string/Cancel" />

            <Button
                android:id="@+id/Submit"
                style="?button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/SpaceRow"
                android:layout_marginTop="@dimen/SpaceRow"
                android:layout_weight="0.2"
                android:text="@string/Submit" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>