<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?colorbg"
    tools:context="com.wf.demo.wfv30.MainActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MainText"
                style="?ptextmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/SpaceRow"
                android:text="@string/TPPrintSlip" />

            <Button
                android:id="@+id/CurrentSlip"
                style="?button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PrintCurrentSlip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Space"
                android:orientation="horizontal"></LinearLayout>

            <Button
                android:id="@+id/CardTrans"
                style="?button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PrintCardTrans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6" />

                <Button
                    android:id="@+id/Cancel"
                    style="?button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/SpaceRow"
                    android:layout_marginTop="@dimen/SpaceRow"
                    android:layout_weight="0.2"
                    android:text="@string/Cancel" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>